--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -27,15 +27,15 @@ jobs:
     with:
     node-version: 16.x
 
-  - name : Install dependencied
-    run: npm  i 
+  - name : Install dependencies
+    run: npm i 
   - name: build project
     run : npm run build
     - name: Upload artifact on order to deploy
     uses: actions/upload-artifact@v2
     with :
     name : production-files
-    path: ./built
+    path: ./build
 
 
   deploy:
@@ -47,11 +47,11 @@ jobs:
   - name : Download artifact
     uses:  actions/dowmload-artifact@v2
     with:
-    name : production-files
-    path : ./build
+      name : production-files
+      path : ./build
 
   - name: Deploy to github pages
-    uses: peaceiris/action-gh-pages@v3
+    uses: peaceiris/actions-gh-pages@v3
 
   with:
   github_token: $ {{secrets.GH_TOKEN}}
