--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -28,10 +28,10 @@ jobs:
     node-version: 16.x
 
   - name : Install dependencies
-    run: npm i 
+     run: npm i
   - name: build project
     run : npm run build
-    - name: Upload artifact on order to deploy
+   - name: Upload artifact in order to deploy
     uses: actions/upload-artifact@v2
     with :
     name : production-files
@@ -45,7 +45,7 @@ jobs:
 
   steps :
   - name : Download artifact
-    uses:  actions/dowmload-artifact@v2
+    uses:  actions/download-artifact@v2
     with:
       name : production-files
       path : ./build
