--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -28,7 +28,7 @@ jobs:
     node-version: 16.x
 
   - name: Install dependencies
-     run: npm install
+     run: npm i
   - name: build project
     run : npm run build
   - name: Upload artifact in order to deploy
